RESOLVED FIXED19364
qtwebkit fails to render underlined links properly
https://bugs.webkit.org/show_bug.cgi?id=19364
Summary qtwebkit fails to render underlined links properly
Adys
Reported 2008-06-02 15:59:26 PDT
I'm not sure in which cases this is happening, but it always happens on the attached URL*. The second line of the hovered link in "Blog Archive > 2008 (1) > June (1) > This is a long enough title that wraps over two li..." doesn't correctly render under Arora. (See attached screenshot) Since it works fine in Midori, I suppose it's qtwebkit-specific. I've been getting a lot of problems with hover/underline in general actually - all wikipedia/wiki-defaultstyle links don't get a hover underline effect for example. * http://adystest.blogspot.com/
Attachments
Screenshot of behaviour (4.90 KB, image/png)
2008-06-02 16:00 PDT, Adys
no flags
Reduced testcase (349 bytes, text/plain)
2009-02-23 10:02 PST, Adam Treat
no flags
Fixes the underline issue for the Qt port and all ports for that matter (3.75 KB, patch)
2009-02-23 12:06 PST, Adam Treat
hyatt: review+
Adys
Comment 1 2008-06-02 16:00:19 PDT
Created attachment 21471 [details] Screenshot of behaviour
Adam Treat
Comment 2 2009-02-23 09:24:39 PST
I can reproduce. Working on a simplified testcase as well as a fix.
Adam Treat
Comment 3 2009-02-23 10:02:48 PST
Created attachment 27884 [details] Reduced testcase This demonstrates the problem. 'foo' is underlined with a dotted line. It should be a straight line. Interestingly this only happens when the document is xhtml strict.
Adam Treat
Comment 4 2009-02-23 12:06:04 PST
Created attachment 27887 [details] Fixes the underline issue for the Qt port and all ports for that matter
Adam Treat
Comment 5 2009-02-23 12:07:35 PST
This bug is essentially the same manifestation as this bug for the GTK port: https://bugs.webkit.org/show_bug.cgi?id=15659
Dave Hyatt
Comment 6 2009-02-23 12:07:38 PST
Comment on attachment 27887 [details] Fixes the underline issue for the Qt port and all ports for that matter r=me
Adam Treat
Comment 7 2009-02-23 12:14:07 PST
Landed with r41152.
Note You need to log in before you can comment on or make changes to this bug.